--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,14 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/audio/
+
+  fonts:
+    - family: Game     
+      fonts:
+        - asset: assets/fonts/Game.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
