--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flame: ^1.10.0
+  flame_audio: ^2.1.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
